# uniblox

./: .gitignore  .mcp.json  CLAUDE.md  Cargo.toml  DECISIONS.md  PROJECT_STATE.md  TODO.md  flake.nix
.claude/: settings.json
.claude/agents/: netcode-auditor.md  reviewer.md  sandbox-auditor.md  test-writer.md
.claude/commands/: build-wasm.md  new-crate.md  review-netcode.md  slice-check.md  write-tests.md
.claude/skills/uniblox-todo/: SKILL.md
crates/client/: CLAUDE.md  Cargo.toml
crates/client/src/: main.rs
crates/client/web/: index.html
crates/engine-core/: CLAUDE.md  Cargo.toml
crates/engine-core/src/: lib.rs
crates/engine-core/tests/: simulation.rs
crates/persistence/: CLAUDE.md  Cargo.toml
crates/persistence/src/: file_store.rs  idb_store.rs  lib.rs
crates/platform/: CLAUDE.md  Cargo.toml
crates/platform/src/: lib.rs
crates/protocol/: CLAUDE.md  Cargo.toml
crates/protocol/src/: content.rs  lib.rs
crates/protocol/tests/: wire.rs
crates/replication/: CLAUDE.md  Cargo.toml
crates/replication/examples/: slice_metrics.rs
crates/replication/src/: interest.rs  lib.rs
crates/replication/tests/: e2e_mode3_star.rs  e2e_two_peer.rs  mode_proof.rs  two_world.rs
crates/scripting/: CLAUDE.md  Cargo.toml
crates/scripting/src/: component.rs  engine.rs  error.rs  lib.rs  system.rs
crates/scripting/tests/: bridge.rs
crates/server/: CLAUDE.md  Cargo.toml
crates/server/src/: lib.rs  main.rs
crates/server/tests/: headless_app.rs
crates/services/: CLAUDE.md  Cargo.toml
crates/services/src/: lib.rs  main.rs  redis_store.rs  store.rs
crates/services/tests/: redis_registry.rs  signaling.rs
crates/standalone/: CLAUDE.md  Cargo.toml
crates/standalone/src/: lib.rs  main.rs
crates/standalone/tests/: standalone_app.rs
crates/transport/: CLAUDE.md  Cargo.toml
crates/transport/examples/: str0m_browser_demo.rs
crates/transport/src/: lib.rs  str0m_peer.rs
crates/transport/tests/: str0m_interop.rs  turn_relay.rs  two_peer.rs
docs/: CONTEXT.md  chatgpt.txt  claude.txt  deepseek.txt  final-buildspec.md  final-todo.md  gemini.md  grok.txt
scripts/: build-wasm.sh  e2e-two-tab.mjs  serve.sh  slice-check.sh
scripts/git-hooks/: pre-commit
scripts/hooks/: deny-destructive.sh  fmt-on-write.sh  gate-clippy.sh  guard-tests.sh
