# uniblox — Cargo workspace (virtual manifest).
#
# Multi-crate workspace per docs/final-todo.md §"Workspace layout (settled)".
# `members = ["crates/*"]` is a glob, so scaffolding a new crate under crates/
# never requires editing this list (see .claude/commands/new-crate.md).

[workspace]
resolver = "3"
members  = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"

# Single source of truth for third-party version pins (ADR-0007). Member crates
# reference these via `dep.workspace = true`; Cargo.lock pins the exact patch.
[workspace.dependencies]
# scripting crate (Rhai ↔ Bevy-ECS bridge). rhai `sync` OFF (NonSend storage, ADR-0011);
# default-features off drops `ahash/runtime-rng` (needs entropy on wasm) → fixed hash keys,
# WASM-safe. `unchecked`/`internals` are NOT defaults and MUST stay off (they void the sandbox).
rhai     = { version = "1.25", default-features = false, features = ["std"] }
bevy_ecs = { version = "0.19" }
log      = { version = "0.4" }
# transport (matchbox two-channel WebRTC DataChannels, ADR-0012) + signaling
matchbox_socket    = { version = "0.14" }
matchbox_signaling = { version = "0.14" }
futures            = { version = "0.3" }
tokio              = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# wasm client glue. wasm-bindgen is pinned EXACTLY to match the flake's
# wasm-bindgen-cli (0.2.121) — CLI and crate versions must agree.
wasm-bindgen         = { version = "=0.2.121" }
wasm-bindgen-futures = { version = "0.4" }
web-sys              = { version = "0.3" }
gloo-timers          = { version = "0.3", features = ["futures"] }
console_error_panic_hook = { version = "0.1" }
console_log              = { version = "1" }
# dev-only
tempfile = { version = "3" }
filetime = { version = "0.2" }

# Size-optimized ship profile (docs/final-todo.md §1.1). `panic = "abort"` is
# scoped to release ONLY — `cargo test` builds under the dev/test profile
# (unwind), so the test harness is unaffected. Do NOT run `cargo test --release`.
[profile.release]
opt-level     = "z"
lto           = true
codegen-units = 1
strip         = true
panic         = "abort"
