# uniblox — Cargo workspace (virtual manifest).
#
# Multi-crate workspace per docs/final-todo.md §"Workspace layout (settled)".
# `members = ["crates/*"]` is a glob, so scaffolding a new crate under crates/
# never requires editing this list (see .claude/commands/new-crate.md).

[workspace]
resolver = "3"
members  = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"

# Single source of truth for third-party version pins (ADR-0007). Member crates
# reference these via `dep.workspace = true`; Cargo.lock pins the exact patch.
[workspace.dependencies]
# scripting crate (Rhai ↔ Bevy-ECS bridge). rhai `sync` OFF (NonSend storage, ADR-0011);
# default-features off drops `ahash/runtime-rng` (needs entropy on wasm) → fixed hash keys,
# WASM-safe. `unchecked`/`internals` are NOT defaults and MUST stay off (they void the sandbox).
rhai     = { version = "1.25", default-features = false, features = ["std"] }
bevy_ecs = { version = "0.19" }
# headless server runtime (ADR-0014): standalone app/time crates — NOT the `bevy`
# umbrella (MinimalPlugins lives in bevy_internal; we assemble the equivalent).
bevy_app  = { version = "0.19" }
bevy_time = { version = "0.19" }
log      = { version = "0.4" }
# replication wire format (ADR-0013): postcard varint encoding, wasm-safe.
serde    = { version = "1", default-features = false, features = ["derive", "alloc"] }
postcard = { version = "1.1", default-features = false, features = ["use-std"] }
# transport (matchbox two-channel WebRTC DataChannels, ADR-0012) + signaling
matchbox_socket    = { version = "0.14" }
matchbox_signaling = { version = "0.14" }
matchbox_protocol  = { version = "0.14", features = ["json"] }   # signaling wire types for the str0m peer (ADR-0015)
futures            = { version = "0.3" }
tokio              = { version = "1", features = ["macros", "rt-multi-thread"] }
# native/server WebRTC via sans-IO str0m (ADR-0015). rust-crypto backend: pure
# Rust DTLS — no aws-lc-sys/cmake/libclang (Nix-friendly).
str0m       = { version = "0.21", default-features = false, features = ["rust-crypto"] }
tungstenite = { version = "0.29" }          # blocking WS client for the str0m signaling thread
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# wasm client glue. wasm-bindgen is pinned EXACTLY to match the flake's
# wasm-bindgen-cli (0.2.121) — CLI and crate versions must agree.
wasm-bindgen         = { version = "=0.2.121" }
wasm-bindgen-futures = { version = "0.4" }
web-sys              = { version = "0.3" }
gloo-timers          = { version = "0.3", features = ["futures"] }
console_error_panic_hook = { version = "0.1" }
console_log              = { version = "1" }
# dev-only
tempfile = { version = "3" }
filetime = { version = "0.2" }
ed25519-dalek = { version = "3" }   # slice instrumentation (sign/verify cost); op-signing itself is Phase 6
serde_json = { version = "1" }
# TURN-relay tests (ADR-0016): raw webrtc-rs peers under Relay-only ICE policy
# prove the coturn relay path. Same version matchbox_socket pins (no dup build).
webrtc = { version = "0.17" }
env_logger = { version = "0.11" }   # RUST_LOG-driven diagnostics in transport tests

# Size-optimized ship profile (docs/final-todo.md §1.1). `panic = "abort"` is
# scoped to release ONLY — `cargo test` builds under the dev/test profile
# (unwind), so the test harness is unaffected. Do NOT run `cargo test --release`.
[profile.release]
opt-level     = "z"
lto           = true
codegen-units = 1
strip         = true
panic         = "abort"

# Crypto is speed-critical and opt-level="z" cripples curve25519 field
# arithmetic (~35x slower ed25519 verify, measured by the slice_metrics
# harness). Override to speed for these packages only. Measured wasm tradeoff
# (2026-07-11, stub-build delta): the override'd crypto costs +106 KB wasm-opt
# / +55 KB brotli and buys sign ~20-24 us / verify ~45 us in-browser (~1.7x
# native) — see /slice-check. Phase 6 revisits if the size budget tightens.
[profile.release.package.curve25519-dalek]
opt-level = 3
[profile.release.package.ed25519-dalek]
opt-level = 3
[profile.release.package.sha2]
opt-level = 3
