[package]
name = "client"
version.workspace = true
edition.workspace = true

[features]
# WebGL2 is the implicit default build. The `webgpu` feature is enabled for the
# WebGPU build and MUST be paired with `RUSTFLAGS=--cfg=web_sys_unstable_apis`
# (see scripts/build-wasm.sh). No-op today; the flag exists so the two-build
# pipeline invocation is valid before Bevy lands. Two builds, never one
# (Bevy issue #13168 — enabling `webgpu` overrides `webgl2`).
default = []
webgpu  = []

[dependencies]

[target.'cfg(target_arch = "wasm32")'.dependencies]
# The transport two-tab demo (interim, until the Bevy client lands): connects
# to the local signaling server and exchanges packets on both channels.
transport = { path = "../transport" }
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
web-sys = { workspace = true, features = ["console"] }
gloo-timers.workspace = true
console_error_panic_hook.workspace = true
console_log.workspace = true
log.workspace = true
