[package]
name = "client"
version.workspace = true
edition.workspace = true

[features]
# WebGL2 is the implicit default build. The `webgpu` feature is enabled for the
# WebGPU build and MUST be paired with `RUSTFLAGS=--cfg=web_sys_unstable_apis`
# (see scripts/build-wasm.sh). Two builds, never one (Bevy issue #13168 —
# enabling `webgpu` overrides `webgl2`).
default = []
webgpu  = ["bevy/webgpu"]

[dependencies]

[target.'cfg(target_arch = "wasm32")'.dependencies]
# Mode-1 (Standalone) playable view (ADR-0031): the net-free sim wired into the
# render app. `standalone` (ADR-0030) provides `add_sim_systems`; both it and
# engine-core carry NO transport/replication — the playable Mode-1 tier stays
# net-free even though the client crate itself still links transport (below) for
# the interim demo. `protocol` is named directly (`PeerId`).
engine-core = { path = "../engine-core" }
standalone = { path = "../standalone" }
protocol = { path = "../protocol" }
# The transport two-tab demo (interim, until the Bevy client lands): connects
# to the local signaling server and exchanges packets on both channels.
transport = { path = "../transport" }
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
# Window + Performance: performance.now() for the in-browser metrics harness.
web-sys = { workspace = true, features = ["console", "Window", "Performance"] }
gloo-timers.workspace = true
console_error_panic_hook.workspace = true
console_log.workspace = true
log.workspace = true
# In-browser ed25519 sign/verify measurement (the slice's measurement gap —
# decides Phase-6 per-frame signing affordability). Fixed key, no RNG.
ed25519-dalek.workspace = true
# The full engine — wasm32 ONLY (ADR-0017; native parity is Phase 14, and
# native Bevy would drag alsa/udev/X11 into the devShell). Pruned to the 2d
# collection; webgl2 is the default build's backend, and the `webgpu` cargo
# feature above swaps it (overrides webgl2 — hence the two builds, ADR-0002).
bevy = { workspace = true, features = ["2d", "bevy_winit", "webgl2"] }
