[package]
name = "persistence"
version.workspace = true
edition.workspace = true

# The Mode-1 content-addressed save (ADR-0033). Serializes the authoritative
# world state to a postcard blob, hashes it to a protocol::ContentId (blake3,
# ADR-0032), and reconstructs an equivalent world by id. DTO-mirrors the
# engine-core components so engine-core stays serde-free. No direct blake3 dep —
# reached via protocol::content_id.
[dependencies]
protocol = { path = "../protocol" }
engine-core = { path = "../engine-core" }
bevy_ecs.workspace = true
serde.workspace = true
postcard.workspace = true

# Browser durable store (ADR-0035, B4): raw web-sys IndexedDB + a hand-rolled
# IDBRequest->oneshot async bridge (no helper crate — keeps the exact
# wasm-bindgen pin safe). `futures` is already in the wasm graph via matchbox.
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen.workspace = true
js-sys.workspace = true
futures.workspace = true
web-sys = { workspace = true, features = [
    "Window",
    "IdbFactory",
    "IdbDatabase",
    "IdbObjectStore",
    "IdbTransaction",
    "IdbTransactionMode",
    "IdbRequest",
    "IdbOpenDbRequest",
    "IdbVersionChangeEvent",
    "DomException",
    "Event",
    "EventTarget",
] }

[dev-dependencies]
# native FileStore tests (ADR-0034): write blobs under a throwaway directory
tempfile.workspace = true
