[package]
name = "services"
version.workspace = true
edition.workspace = true

[dependencies]
matchbox_signaling.workspace = true
matchbox_protocol.workspace = true         # PeerId + JsonPeer{Request,Event} wire types
axum = { workspace = true, features = ["ws"] }  # reasoned gate rejections (ADR-0038) + ws::Message for the relay (ADR-0039)
async-trait.workspace = true               # the custom NextTopology SignalingTopology impl (ADR-0039)
futures.workspace = true                   # StreamExt on the WsStateMeta receiver (relay loop, ADR-0039)
tokio.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
# raw-WS signaling integration tests (ADR-0037/0038/0039): connect peers, assert
# relay + scope isolation + the asymmetric filter + ?next=N session grouping + the
# session registry. `time`/`net` extend the workspace tokio features (macros/rt)
# for `timeout`/`sleep` + the WS client.
tokio = { workspace = true, features = ["time", "net", "macros", "rt-multi-thread"] }
tokio-tungstenite.workspace = true
serde_json.workspace = true
