[package]
name = "transport"
version.workspace = true
edition.workspace = true

[dependencies]
matchbox_socket.workspace = true

[dev-dependencies]
# the two-peer datachannel test embeds an in-process signaling server
matchbox_signaling.workspace = true
tokio = { workspace = true, features = ["time"] }
